--- a/task_manager/templates/index.html
+++ b/task_manager/templates/index.html
@@ -1,15 +1,20 @@
 {% extends 'base.html' %}
+{% load i18n %}
+
+{% load bootstrap4 %}
 
 {% block main %}
-  <main class="flex-grow-1">
-    <div class="container-lg mt-4">
-      <div class="row">
-        <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
-          <h1 class="display-3">Менеджер задач</h1>
-          <p class="lead">Привет!</p>
-          <a class="btn btn-primary btn-lg" href="https://ru.hexlet.io">Узнать больше</a>
-        </div>
+<main class="flex-grow-1">
+  <div class="container wrapper flex-grow-1">
+    <h1 class="my-4"></h1>
+    <div class="card">
+      <div class="card-body p-5 bg-light">
+        <div class="display-4">{% translate "Hello from Hexlet!" %}</div>
+        <p class="lead">{% translate "Practical programming courses" %}</p>
+        <hr>
+        <a class="btn btn-primary btn-lg" href="https://ru.hexlet.io">{% translate "Learn more" %}</a>
       </div>
     </div>
-  </main>
+  </div>
+</main>
 {% endblock main %}
