--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -1,22 +1,26 @@
-<header class="flex-shrink-0">
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark px-3">
+{% load bootstrap4 %}
+{% load i18n %}
+
+<nav class="navbar navbar-expand-md navbar-dark px-3" style="background-color: rgb(31, 31, 43);">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">Менеджер задач</a>
+      <a class="navbar-brand" href="/">{% translate "Task manager" %}</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/users/">Пользователи</a>
+            <a class="nav-link" href="/users/">{% translate "Users" %}</a>
           </li>
         </ul>
-        <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="#">Вход</a>
-            <a class="nav-link" href="#">Регистрация</a>
-        </div>
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+              <a class="nav-link" href="#">{% translate "Log in" %}</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">{% translate "Registration" %}</a>
+          </li>
+        </ul>
       </div>
     </div>
 </nav>
-</header>
-
