--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -15,10 +15,10 @@
         </ul>
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-              <a class="nav-link" href="#">{% translate "Log in" %}</a>
+              <a class="nav-link" href="{% url 'user_login' %}">{% translate "Log in" %}</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#">{% translate "Registration" %}</a>
+              <a class="nav-link" href="{% url 'user_create' %}">{% translate "Registration" %}</a>
           </li>
         </ul>
       </div>
