Add create user

--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -10,7 +10,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/users/">{% translate "Users" %}</a>
+            <a class="nav-link" href="{% url 'users' %}">{% translate "Users" %}</a>
           </li>
         </ul>
         <ul class="navbar-nav ms-auto">
