--- a/task_manager/templates/index.html
+++ b/task_manager/templates/index.html
@@ -5,7 +5,7 @@
 
 {% block main %}
 <main class="flex-grow-1">
-  <div class="container wrapper flex-grow-1">
+  <div class="container wrapper flex-grow-1 my-5">
     <h1 class="my-4"></h1>
     <div class="card">
       <div class="card-body p-5 bg-light">
