--- a/task_manager/templates/users/create.html
+++ b/task_manager/templates/users/create.html
@@ -10,6 +10,7 @@
 {% translate 'Confirm password' as conf %}
 <div class="container mx-auto my-5" style="width: 600px;">
     <form method="post">
+        {% csrf_token %}
 
         <div class="text-center mb-4">
             <h1 class="display-4">{% translate "Sign up" %}</h1>
@@ -17,28 +18,30 @@
 
         <div class="form-group">
             <label for="first_name">{% translate 'First name' %}</label>
-            <input type="text" class="form-control" id="id_firstname" placeholder="{% translate 'Enter first name' %}">
+            <input type="text" class="form-control" name="first_name" id="id_firstname" placeholder="{% translate 'Enter first name' %}">
         </div>
         <div class="form-group">
             <label for="last_name">{% translate 'Last name' %}</label>
-            <input type="text" class="form-control" id="id_lastname" placeholder="{% translate 'Enter last name' %}">
+            <input type="text" class="form-control" name="last_name" id="id_lastname" placeholder="{% translate 'Enter last name' %}">
         </div>
         <div class="form-group">
-            <label for="username_name">{% translate 'Username' %}</label>
-            <input type="text" class="form-control" id="id_username" placeholder="{% translate 'Enter username' %}">
+            <label for="username">{% translate 'Username' %}</label>
+            <input type="text" class="form-control" name="username" id="id_username" placeholder="{% translate 'Enter username' %}">
             <small id="nameHelp" class="form-text text-muted">{% translate 'Required field. No more than 30 characters. Only letters, numbers and @/./+/-/_ symbols.' %}</small>
         </div>
         <div class="form-group">
         <label for="Password1">{{ psw }}</label>
-        <input type="password" class="form-control" id="id_password1" placeholder="{{ psw }}">
+        <input type="password" class="form-control" name="password1" id="id_password1" placeholder="{{ psw }}">
         <small id="passwHelp" class="form-text text-muted">{% translate 'Your password must contain at least 3 characters.' %}</small>
         </div>
         <div class="form-group">
             <label for="Password2">{{ conf }}</label>
-            <input type="password" class="form-control" id="id_password2" placeholder="{{ conf }}">
+            <input type="password" class="form-control" name="password2" id="id_password2" placeholder="{{ conf }}">
             <small id="passwHelp" class="form-text text-muted">{% translate 'To confirm, please enter your password again.' %}</small>
         </div>
         <button type="submit" class="btn btn-primary">{% translate 'Submit' %}</button>
+
+        {{ form.errors }}
     </form>
 </div>
 {% endblock main %}
