--- a/task_manager/templates/users/create.html
+++ b/task_manager/templates/users/create.html
@@ -8,27 +8,28 @@
 {% block main %}
 {% translate 'Password' as psw %}
 {% translate 'Confirm password' as conf %}
-<div class="container mx-auto my-5" style="width: 600px;">
-    <form method="post">
+
+<div class="container mx-auto my-5" style="width: 700px;">
+    <form method="post" class="form-group">
         {% csrf_token %}
 
         <div class="text-center mb-4">
-            <h1 class="display-4">{% translate "Sign up" %}</h1>
+            <h1 class="display-4">{{ table_name }}</h1>
         </div>
 
         <div class="form-group">
-            <label for="{{ form.first_name.id_for_label }}">{% translate 'First name' %}</label>
-            {{ form.first_name }}
+            <label for="first_name">{% translate 'First name' %}</label>
+            <input type="text" class="form-control" name="first_name" id="id_firstname" value="{{ form.first_name.value|default:'' }}" placeholder="{% translate 'Enter first name' %}">
         </div>
 
         <div class="form-group">
             <label for="{{ form.last_name.id_for_label }}">{% translate 'Last name' %}</label>
-            {{ form.last_name }}
+            <input type="text" class="form-control" name="last_name" id="id_lastname" value="{{ form.last_name.value|default:'' }}" placeholder="{% translate 'Enter last name' %}">
         </div>
 
         <div class="form-group">
             <label for="{{ form.username.id_for_label }}">{% translate 'Username' %}</label>
-            {{ form.username }}
+            <input type="text" class="form-control" name="username" id="id_username" value="{{ form.username.value|default:'' }}" placeholder="{% translate 'Enter username' %}">
             <small id="nameHelp" class="form-text text-muted">{% translate 'Required field. No more than 30 characters. Only letters, numbers and @/./+/-/_ symbols.' %}</small>
         </div>
 
@@ -44,7 +45,7 @@
             <small class="form-text text-muted">{% translate 'To confirm, please enter your password again.' %}</small>
         </div>
 
-        <button type="submit" class="btn btn-primary">{% translate 'Submit' %}</button>
+        <button type="submit" class="btn btn-primary">{{ button_name }}</button>
 
         {{ form.errors }}
     </form>
