--- a/task_manager/templates/login.html
+++ b/task_manager/templates/login.html
@@ -6,11 +6,12 @@
 
 {% block main %}
 <div class="container mx-auto my-5" style="width: 400px;">
-<form class="form-signin">
+<form class="form-signin" method="post">
+    {% csrf_token %}
     <div class="text-center mb-4">
       <h1 class="display-4">{% translate "Login" %}</h1>
     </div>
-  
+
     <div class="form-group">
       <input type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" class="form-control" placeholder="{% translate 'Username' %}" title="" required="" id="id_username">
     </div>
