--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -3,24 +3,50 @@
 
 <nav class="navbar navbar-expand-md navbar-dark px-3" style="background-color: rgb(31, 31, 43);">
     <div class="container-fluid">
+
       <a class="navbar-brand" href="/">{% translate "Task manager" %}</a>
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
             <a class="nav-link" href="{% url 'users' %}">{% translate "Users" %}</a>
           </li>
+        {% if request.user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="#">{% translate "Statuses" %}</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">{% translate "Tags" %}</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">{% translate "Tasks" %}</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Hi {{request.user | title}}</a>
+          </li>
         </ul>
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-              <a class="nav-link" href="{% url 'user_login' %}">{% translate "Log in" %}</a>
+            <a class="nav-link" href="{% url 'logout' %}">{% translate "Logout" %}</a>
+          </li>
+        </ul>
+        {% else %}
+        </ul>
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+              <a class="nav-link" href="{% url 'login' %}">{% translate "Log in" %}</a>
           </li>
           <li class="nav-item">
               <a class="nav-link" href="{% url 'user_create' %}">{% translate "Registration" %}</a>
           </li>
         </ul>
+        {% endif %}
+
       </div>
     </div>
 </nav>
