--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -3,6 +3,15 @@
 
 <!doctype html>
 <html lang="en">
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+        document.querySelectorAll('.alert').forEach(alert => {
+            alert.addEventListener('click', () => {
+                alert.style.display = 'none';
+            });
+        });
+    });
+</script>
   {% block head %}
   <head>
     <meta charset="utf-8">
@@ -16,12 +25,13 @@
   <body class="min-vh-100 d-flex flex-column">
     {% include "navbar.html" %}
 
-    <div id="content">
-      {% block content %}{% endblock %}
-    </div>
+  <main class="container wrapper flex-grow-1 my-4">
 
-    {% block main %}
-    {% endblock main %}
+    {% bootstrap_messages messages %}
+    
+    {% block content %}
+    {% endblock %}
+  </main>
 
   {% bootstrap_javascript %}
   </body>
