--- a/task_manager/templates/login.html
+++ b/task_manager/templates/login.html
@@ -4,23 +4,23 @@
 {% load bootstrap4 %}
 
 
-{% block main %}
+{% block content %}
 <div class="container mx-auto my-5" style="width: 400px;">
-<form class="form-signin" method="post">
-    {% csrf_token %}
-    <div class="text-center mb-4">
-      <h1 class="display-4">{% translate "Login" %}</h1>
-    </div>
+  <form class="form-signin" method="post">
+      {% csrf_token %}
+      <div class="text-center mb-4">
+        <h1 class="display-4">{% translate "Login" %}</h1>
+      </div>
 
-    <div class="form-group">
-      <input type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" class="form-control" placeholder="{% translate 'Username' %}" title="" required="" id="id_username">
-    </div>
+      <div class="form-group">
+        <input type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" class="form-control" placeholder="{% translate 'Username' %}" title="" required="" id="id_username">
+      </div>
 
-    <div class="form-group">
-      <input type="password" name="password" autocomplete="current-password" class="form-control" placeholder="{% translate 'Password' %}" title="" required="" id="id_password">
-    </div>
-  
-    <button class="btn btn-lg btn-primary btn-block" type="submit">{% translate "Sign in" %}</button>
-</form>
+      <div class="form-group">
+        <input type="password" name="password" autocomplete="current-password" class="form-control" placeholder="{% translate 'Password' %}" title="" required="" id="id_password">
+      </div>
+    
+      <button class="btn btn-lg btn-primary btn-block" type="submit">{% translate "Sign in" %}</button>
+  </form>
 </div>
-{% endblock main %}
+{% endblock content %}
