--- a/task_manager/templates/login.html
+++ b/task_manager/templates/login.html
@@ -12,6 +12,17 @@
         <h1 class="display-4">{% translate "Login" %}</h1>
       </div>
 
+    {% if form.non_field_errors %}
+      <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        {% for error in form.non_field_errors %}
+          {{ error }}
+        {% endfor %}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+    {% endif %}
+
       <div class="form-group">
         <input type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" class="form-control" placeholder="{% translate 'Username' %}" title="" required="" id="id_username">
       </div>
