--- a/task_manager/templates/users/create.html
+++ b/task_manager/templates/users/create.html
@@ -6,48 +6,16 @@
 
 
 {% block content %}
-{% translate 'Password' as psw %}
-{% translate 'Confirm password' as conf %}
 
 <div class="container mx-auto" style="width: 700px;">
-    <form method="post" class="form-group">
+    <div class="text-center mb-4">
+        <h1 class="display-4">{{ table_name }}</h1>
+    </div>
+    <form method="post">
         {% csrf_token %}
-
-        <div class="text-center mb-4">
-            <h1 class="display-4">{{ table_name }}</h1>
-        </div>
-
-        <div class="form-group">
-            <label for="first_name">{% translate 'First name' %}</label>
-            <input type="text" class="form-control" name="first_name" id="id_firstname" value="{{ form.first_name.value|default:'' }}" placeholder="{% translate 'Enter first name' %}">
-        </div>
-
-        <div class="form-group">
-            <label for="{{ form.last_name.id_for_label }}">{% translate 'Last name' %}</label>
-            <input type="text" class="form-control" name="last_name" id="id_lastname" value="{{ form.last_name.value|default:'' }}" placeholder="{% translate 'Enter last name' %}">
-        </div>
-
-        <div class="form-group">
-            <label for="{{ form.username.id_for_label }}">{% translate 'Username' %}</label>
-            <input type="text" class="form-control" name="username" id="id_username" value="{{ form.username.value|default:'' }}" placeholder="{% translate 'Enter username' %}">
-            <small id="nameHelp" class="form-text text-muted">{% translate 'Required field. No more than 30 characters. Only letters, numbers and @/./+/-/_ symbols.' %}</small>
-        </div>
-
-        <div class="form-group">
-            <label for="{{ form.password1.id_for_label }}">{{ psw }}</label>
-            <input type="password" class="form-control" name="password1" id="id_password1" placeholder="{{ psw }}" required>
-            <small class="form-text text-muted">{% translate 'Your password must contain at least 3 characters.' %}</small>
-        </div>
-
-        <div class="form-group">
-            <label for="{{ form.password2.id_for_label }}">{{ conf }}</label>
-            <input type="password" class="form-control" name="password2" id="id_password2" placeholder="{{ conf }}" required>
-            <small class="form-text text-muted">{% translate 'To confirm, please enter your password again.' %}</small>
-        </div>
-
-        <button type="submit" class="btn btn-primary">{{ button_name }}</button>
-
-        {{ form.errors }}
+        {% bootstrap_form form %}
+        <input class="btn btn-primary" type="submit" value="{{ button_name }}">
     </form>
+
 </div>
 {% endblock content %}
