--- a/task_manager/templates/users/users.html
+++ b/task_manager/templates/users/users.html
@@ -22,7 +22,7 @@
                 <td>{{ user.date_joined }}</td>
                 <td>
                     <a href="{% url 'user_update' user.id %}">{% translate "Change" %}</a><br>
-                    <a href="{% url 'user_delete' user.id %}">{% translate "Delete" %}</a>
+                    <a href="{% url 'user_delete' user.id %}" rel="nofollow">{% translate "Delete" %}</a>
                 </td>
             </tr>
             {% endfor %}
