--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -18,7 +18,7 @@
           </li>
         {% if request.user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="#">{% translate "Statuses" %}</a>
+            <a class="nav-link" href="{% url 'statuses' %}">{% translate "Statuses" %}</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">{% translate "Tags" %}</a>
