--- a/task_manager/templates/statuses/statuses.html
+++ b/task_manager/templates/statuses/statuses.html
@@ -7,7 +7,7 @@
       <table class="table table-striped">
         <thead>
           <tr>
-            <th scope="col">ID</th>
+            <th scope="col" style="width: 100px;">ID</th>
             <th scope="col">{% translate "Name" %}</th>
             <th scope="col" style="width: 155px;">{% translate "Date of creation" %}</th>
             <th scope="col" style="width: 15px;"></th>
