--- a/task_manager/templates/users/users.html
+++ b/task_manager/templates/users/users.html
@@ -6,7 +6,7 @@
       <table class="table table-striped">
         <thead>
           <tr>
-            <th scope="col">ID</th>
+            <th scope="col" style="width: 100px;">ID</th>
             <th scope="col">{% translate "Username" %}</th>
             <th scope="col">{% translate "Full name" %}</th>
             <th scope="col" style="width: 155px;">{% translate "Date of creation" %}</th>
