--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -24,7 +24,7 @@
             <a class="nav-link" href="#">{% translate "Tags" %}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">{% translate "Tasks" %}</a>
+            <a class="nav-link" href="{% url 'tasks' %}">{% translate "Tasks" %}</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Hi {{request.user | title}}</a>
