--- a/task_manager/templates/statuses/statuses.html
+++ b/task_manager/templates/statuses/statuses.html
@@ -3,7 +3,7 @@
 
 {% block content %}
       <h1 class="display-4">{% translate "Statuses" %}</h1>
-      <a class="nav-link" href="/statuses/create/">{% translate "Create status" %}</a>
+      <a class="nav-link" href="{% url 'create_status' %}">{% translate "Create status" %}</a>
       <table class="table table-striped">
         <thead>
           <tr>
