--- a/task_manager/templates/tasks/tasks.html
+++ b/task_manager/templates/tasks/tasks.html
@@ -7,25 +7,25 @@
       <table class="table table-striped">
         <thead>
           <tr>
-            <th scope="col" style="width: 100px;">ID</th>
+            <th scope="col">ID</th>
             <th scope="col">{% translate "Name" %}</th>
             <th scope="col">{% translate "Status" %}</th>
             <th scope="col">{% translate "Author" %}</th>
-            <th scope="col" style="width: 155px;">{% translate "Performer" %}</th>
-            <th scope="col" style="width: 155px;">{% translate "Date of creation" %}</th>
-            <th scope="col" style="width: 15px;"></th>
+            <th scope="col">{% translate "Performer" %}</th>
+            <th scope="col">{% translate "Date of creation" %}</th>
+            <th scope="col"></th>
           </tr>
         </thead>
         <tbody>
             {% for task in tasks %}
             <tr>
-              <th scope="row">{{ task.id }}</th>
-                <td>{{ task.task_name }}</td>
-                <td>{{ task.status.title }}</td>
-                <td>{{ task.author }}</td>
-                <td>{{ task.performer.first_name }} {{ task.performer.last_name }}</td>
-                <td>{{ task.date_joined }}</td>
-                <td>
+              <th scope="row" style="width: 2%;">{{ task.id }}</th>
+                <td class="text-break" style="width: 25%;">{{ task.task_name }}</td>
+                <td class="text-break" style="width: 20%;">{{ task.status.title }}</td>
+                <td class="text-break" style="width: 15%;">{{ task.author }}</td>
+                <td class="text-break" style="width: 15%;">{{ task.performer.first_name }} {{ task.performer.last_name }}</td>
+                <td style="width: 13%;">{{ task.created_at }}</td>
+                <td style="width: 5%;">
                     <a href="{% url 'user_update' user.id %}">{% translate "Change" %}</a><br>
                     <a href="{% url 'user_delete' user.id %}" rel="nofollow">{% translate "Delete" %}</a>
                 </td>
@@ -34,3 +34,10 @@
         </tbody>
       </table>
 {% endblock %}
+
+
+
+
+
+
+
