--- a/task_manager/templates/tasks/tasks.html
+++ b/task_manager/templates/tasks/tasks.html
@@ -20,10 +20,10 @@
             {% for task in tasks %}
             <tr>
               <th scope="row" style="width: 2%;">{{ task.id }}</th>
-                <td class="text-break" style="width: 25%;">{{ task.task_name }}</td>
-                <td class="text-break" style="width: 20%;">{{ task.status.title }}</td>
+                <td class="text-break" style="width: 25%;">{{ task.task }}</td>
+                <td class="text-break" style="width: 20%;">{{ task.status.name }}</td>
                 <td class="text-break" style="width: 15%;">{{ task.author }}</td>
-                <td class="text-break" style="width: 15%;">{{ task.performer.first_name }} {{ task.performer.last_name }}</td>
+                <td class="text-break" style="width: 15%;">{{ task.executor.first_name }} {{ task.executor.last_name }}</td>
                 <td style="width: 13%;">{{ task.created_at }}</td>
                 <td style="width: 5%;">
                     <a href="{% url 'update_task' task.id %}">{% translate "Change" %}</a><br>
