--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -26,11 +26,11 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'tasks' %}">{% translate "Tasks" %}</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Hi {{request.user | title}}</a>
-          </li>
         </ul>
         <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'user_profile' request.user.id %}">{{request.user | title}}</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'logout' %}">{% translate "Logout" %}</a>
           </li>
