--- a/task_manager/templates/users/users.html
+++ b/task_manager/templates/users/users.html
@@ -17,7 +17,9 @@
             {% for user in users %}
             <tr>
               <th scope="row">{{ user.id }}</th>
-                <td>{{ user.username }}</td>
+                <td>
+                  <a href="{% url 'user_profile' user.id %}">{{ user.username }}</a>
+                </td>
                 <td>{{ user.first_name }} {{ user.last_name }}</td>
                 <td>{{ user.date_joined }}</td>
                 <td>
