--- a/task_manager/templates/tasks/card.html
+++ b/task_manager/templates/tasks/card.html
@@ -14,7 +14,7 @@
           <h2>{{ task.task }}</h2>
         </div>
         <div class="card-body bg-light">
-          <p>1</p>
+          <p>{{ task.description }}</p>
           <hr>
           <div class="container">
             <div class="row p-1">
