--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -21,7 +21,7 @@
             <a class="nav-link" href="{% url 'statuses' %}">{% translate "Statuses" %}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">{% translate "Tags" %}</a>
+            <a class="nav-link" href="{% url 'labeles' %}">{% translate "Labeles" %}</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'tasks' %}">{% translate "Tasks" %}</a>
