--- a/task_manager/templates/tasks/tasks.html
+++ b/task_manager/templates/tasks/tasks.html
@@ -6,7 +6,7 @@
 {% block content %}
       <h1 class="display-4">{% translate "Tasks" %}</h1>
 
-      <a class="nav-link" href="/tasks/create/">{% translate "Create task" %}</a>
+      <a class="nav-link" href="{% url 'create_task' %}">{% translate "Create task" %}</a>
 
       <div class="card mb-3">
         <div class="card-body bg-light">
