--- a/task_manager/templates/index.html
+++ b/task_manager/templates/index.html
@@ -7,10 +7,10 @@
     <h1 class="my-4"></h1>
     <div class="card">
       <div class="card-body p-5 bg-light">
-        <div class="display-4">{% translate "Hello from Hexlet!" %}</div>
-        <p class="lead">{% translate "Practical programming courses" %}</p>
+        <div class="display-4">{% translate "Hello" %}!</div>
+        <p class="lead">{% translate "You're on the study proct page - the task manager. You can register and try to create your own task." %}</p>
         <hr>
-        <a class="btn btn-primary btn-lg" href="https://ru.hexlet.io">{% translate "Learn more" %}</a>
+        <a class="btn btn-primary btn-lg" href="{% url 'user_create' %}">{% translate "Registration" %}</a>
       </div>
     </div>
 {% endblock %}
