--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -36,7 +36,7 @@
     </main>
     <footer>
       <div class="container my-5 pt-4 border-top">
-        <a target="_blank" href="https://ru.hexlet.io">Hexlet</a>
+        <a target="_blank" href="https://github.com/sidnnov/">by sidnnov</a>
       </div>
     </footer>
   </body>
