Refactoring utilities and views, fix base

--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -18,7 +18,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Project for Hexlet.io">
-    <title>Менеджер задач</title>
+    <title>{% translate "Task manager" %}</title>
     {% bootstrap_css %}
     {% bootstrap_javascript %}
   </head>
