--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -2,21 +2,19 @@
 {% load i18n %}
 
 <nav class="navbar navbar-expand-md navbar-dark px-3" style="background-color: rgb(31, 31, 43);">
-    <div class="container-fluid">
 
-      <a class="navbar-brand" href="/">{% translate "Task manager" %}</a>
+    <a class="navbar-brand" href="{% url 'index' %}">{% translate "Task manager" %}</a>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
 
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
             <a class="nav-link" href="{% url 'users' %}">{% translate "Users" %}</a>
           </li>
-        {% if request.user.is_authenticated %}
+          {% if request.user.is_authenticated %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'statuses' %}">{% translate "Statuses" %}</a>
           </li>
@@ -46,7 +44,5 @@
           </li>
         </ul>
         {% endif %}
-
-      </div>
     </div>
 </nav>
