Refactoring filtr, add app django_filters

--- a/task_manager/templates/tasks/tasks.html
+++ b/task_manager/templates/tasks/tasks.html
@@ -14,7 +14,7 @@
             <div class="col-md-5">
                 <form method="get" class="filter-form">
 
-                  {% bootstrap_form form %}
+                  {% bootstrap_form filter.form %}
 
                   <div class="form-group">
                     <input class="btn btn-primary" type="submit" value="{% translate 'Show' %}">
