--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -37,10 +37,10 @@
         </ul>
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-              <a class="nav-link" href="{% url 'login' %}">{% translate "Log in" %}</a>
+              <a class="nav-link" href="{% url 'login' %}">{% translate "Login" %}</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="{% url 'user_create' %}">{% translate "Registration" %}</a>
+              <a class="nav-link" href="{% url 'user_create' %}">{% translate "Sign up" %}</a>
           </li>
         </ul>
         {% endif %}
