Update base lang ru

--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -2,7 +2,7 @@
 {% load bootstrap4 %}
 
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <script>
     document.addEventListener('DOMContentLoaded', () => {
         document.querySelectorAll('.alert').forEach(alert => {
