--- a/task_manager/templates/tasks/card.html
+++ b/task_manager/templates/tasks/card.html
@@ -33,16 +33,16 @@
               <div class="col">{% translate "Date of creation" %}</div>
               <div class="col">{{ task.created_at }}</div>
             </div>
-            <!-- <div class="row p-1">
+            <div class="row p-1">
               <div class="col">
-                <h6>Метки:</h6>
-                <ul>                  
-                    <li>DEBUG</li>
-                    <li>Don't forget to drink</li>
-                    <li>odhako1</li>
+                <h6>{% translate "Label" %}:</h6>
+                <ul>
+                  {% for label in task.label.all %}
+                  <li>{{ label.name }}</li>
+                  {% endfor %}
                 </ul>
               </div>
-            </div> -->
+            </div>
             <div class="row p-1">
               <div class="col">
                 <a href="{% url 'update_task' task.id %}">{% translate "Change" %}</a><br>
