--- a/task_manager/templates/tasks/card.html
+++ b/task_manager/templates/tasks/card.html
@@ -37,7 +37,7 @@
               <div class="col">
                 <h6>{% translate "Label" %}:</h6>
                 <ul>
-                  {% for label in task.label.all %}
+                  {% for label in task.labels.all %}
                   <li>{{ label.name }}</li>
                   {% endfor %}
                 </ul>
