--- a/task_manager/templates/tasks/card.html
+++ b/task_manager/templates/tasks/card.html
@@ -11,7 +11,7 @@
     <h1 class="display-4">{% translate "Task view" %}</h1>
     <div class="card">
         <div class="card-header bg-secondary text-white">
-          <h2>{{ task.task }}</h2>
+          <h2>{{ task.name }}</h2>
         </div>
         <div class="card-body bg-light">
           <p>{{ task.description }}</p>
